Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="der-gott-allen-trostes-von-hannah-whitall-smith" class="anchor" href="#der-gott-allen-trostes-von-hannah-whitall-smith" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Der Gott allen Trostes von Hannah Whitall Smith</h1>
+        <h4>
+<a id="originaltitel-the-god-of-all-comfort-von-hannah-whitall-smith" class="anchor" href="#originaltitel-the-god-of-all-comfort-von-hannah-whitall-smith" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Originaltitel "The God of All Comfort" von Hannah Whitall Smith</h4>
 
-<h2>
-<a id="originaltitel-the-god-of-all-comfort-von-hannah-whitall-smith" class="anchor" href="#originaltitel-the-god-of-all-comfort-von-hannah-whitall-smith" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Originaltitel "The God of All Comfort" von Hannah Whitall Smith</h2>
+<h4>
+<a id="frei-übersetzt-aus-dem-englischen-von-c-marg" class="anchor" href="#frei-%C3%BCbersetzt-aus-dem-englischen-von-c-marg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Frei übersetzt aus dem Englischen von C. Marg</h4>
 
-<h2>
-<a id="frei-übersetzt-aus-dem-englischen-von-c-marg" class="anchor" href="#frei-%C3%BCbersetzt-aus-dem-englischen-von-c-marg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Frei übersetzt aus dem Englischen von C. Marg</h2>
-
-<p>Das Buch ist meiner Meinung nach sehr wertvoll für Christen und fand es schade, dass es nicht - beziehungsweise nur Kapitelweise - auf Deutsch verfügbar ist. Daher habe ich begonnen, es selbst zu übersetzen.</p>
+<p>Das Buch ist meiner Meinung nach sehr wertvoll für Christen und ich fand es schade, dass es nicht - beziehungsweise nur Kapitelweise - auf Deutsch verfügbar ist. Daher habe ich begonnen, es selbst zu übersetzen.</p>
 
 <p>Ich bin kein professioneller Übersetzer und habe bisher noch keine Korrekturen von bisherigen Lesern erhalten. Vielleicht ermöglicht diese Plattform ja einen regeren Austausch.</p>
 
@@ -54,25 +51,25 @@
 <a id="kapitel-die-bereits-übersetzt-sind" class="anchor" href="#kapitel-die-bereits-%C3%BCbersetzt-sind" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kapitel, die bereits übersetzt sind:</h2>
 
 <ol>
-<li>Warum dieses Buch geschrieben wurde - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%201.pdf">PDF</a>
+<li>Warum dieses Buch geschrieben wurde  - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%201.pdf">PDF</a>
 </li>
-<li>Was ist Sein Name? - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%202.pdf">PDF</a>
+<li>Was ist Sein Name?   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%202.pdf">PDF</a>
 </li>
-<li>Der Gott allen Trostes - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%203.pdf">PDF</a>
+<li>Der Gott allen Trostes   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%203.pdf">PDF</a>
 </li>
 <li>Der Herr unser Hirte - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%204.pdf">PDF</a>
 </li>
-<li>Er sprach zu ihnen über den Vater - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%205.pdf">PDF</a>
+<li>Er sprach zu ihnen über den Vater   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%205.pdf">PDF</a>
 </li>
-<li>Jehovah - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%206.pdf">PDF</a>
+<li>Jehovah  - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%206.pdf">PDF</a>
 </li>
-<li>Gütig ist der Herr - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%207.pdf">PDF</a>
+<li>Gütig ist der Herr  - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%207.pdf">PDF</a>
 </li>
 <li>Der Herr, unsere Wohnung - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%208.pdf">PDF</a>
 </li>
-<li>Viel mehr im Vergleich zu viel weniger - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%209.pdf">PDF</a>
+<li>Viel mehr im Vergleich zu viel weniger   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%209.pdf">PDF</a>
 </li>
-<li>Selbstprüfung - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2010.pdf">PDF</a>
+<li>Selbstprüfung   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2010.pdf">PDF</a>
 </li>
 </ol>
       </section>
