Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <p>Ich bin kein professioneller Übersetzer und habe bisher noch keine Korrekturen von bisherigen Lesern erhalten. Vielleicht ermöglicht diese Plattform ja einen regeren Austausch.</p>
 
-<p>Die Textvorlage stammt von <a href="http://www.ccel.org/ccel/smith_hw/comfort.html">CCEL</a> und ist, soweit mir das bekannt ist, inzwischen Public Domain.</p>
+<p>Die Textvorlage stammt von <a href="http://www.ccel.org/ccel/smith_hw/comfort.html">CCEL</a> und ist, soweit mir das bekannt ist, inzwischen Public Domain. An Stellen, an denen in der CCEL-Vorlage Text zu fehlen scheint, habe ich auf eine zweite Vorlage von <a href="http://www.alampthatburns.net/smith/comfort/godofallcomfort-contents.htm">alampthatburns.net</a> zurückgegriffen.</p>
 
-<p>Zum Finden der Bibelstellen die im englischen Original ohne Quellenangabe verwendet werden, nutze ich die Suchfunktion des <a href="http://www.bibleserver.com/text/KJV.ELB.NLB.LUT/Genesis1">Bibelservers</a> - der Text der deutschen Bibelübersetzungen dort darf jedoch aus Lizenzgründen nicht in der Übersetzung verwendet werden.</p>
+<p>Zum Finden der Bibelstellen, die im englischen Original ohne Quellenangabe verwendet werden, nutze ich die Suchfunktion des <a href="http://www.bibleserver.com/text/KJV.ELB.NLB.LUT/Genesis1">Bibelservers</a> - der Text der deutschen Bibelübersetzungen dort darf jedoch aus Lizenzgründen nicht in der Übersetzung verwendet werden.</p>
 
 <p>Daher verwende ich für Bibelzitate in der Übersetzung die lizenzfreie "Schlachter 1951"-Bibel, wie sie auf <a href="http://www.bibel-online.net/buch/schlachter_1951/1_mose/1/#1">Bibel-Online.net</a> angeboten wird.</p>
 
