Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Der Gott allen Trostes : Übersetzung des Buches &quot;The God of All Comfort&quot; von Hannah W. Smith">
+    <meta name="description" content="Der Gott allen Trostes : Übersetzung des Buches &quot;The God of All Comfort&quot; von Hannah Whitall Smith">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/einhirn/der-gott-allen-trostes">View on GitHub</a>
 
           <h1 id="project_title">Der Gott allen Trostes</h1>
-          <h2 id="project_tagline">Übersetzung des Buches &quot;The God of All Comfort&quot; von Hannah W. Smith</h2>
+          <h2 id="project_tagline">Übersetzung des Buches &quot;The God of All Comfort&quot; von Hannah Whitall Smith</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/einhirn/der-gott-allen-trostes/zipball/master">Download this project as a .zip file</a>
@@ -32,9 +32,6 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h4>
-<a id="originaltitel-the-god-of-all-comfort-von-hannah-whitall-smith" class="anchor" href="#originaltitel-the-god-of-all-comfort-von-hannah-whitall-smith" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Originaltitel "The God of All Comfort" von Hannah Whitall Smith</h4>
-
-<h4>
 <a id="frei-übersetzt-aus-dem-englischen-von-c-marg" class="anchor" href="#frei-%C3%BCbersetzt-aus-dem-englischen-von-c-marg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Frei übersetzt aus dem Englischen von C. Marg</h4>
 
 <p>Das Buch ist meiner Meinung nach sehr wertvoll für Christen und ich fand es schade, dass es nicht - beziehungsweise nur Kapitelweise - auf Deutsch verfügbar ist. Daher habe ich begonnen, es selbst zu übersetzen.</p>
@@ -48,28 +45,93 @@
 <p>Daher verwende ich für Bibelzitate in der Übersetzung die lizenzfreie "Schlachter 1951"-Bibel, wie sie auf <a href="http://www.bibel-online.net/buch/schlachter_1951/1_mose/1/#1">Bibel-Online.net</a> angeboten wird.</p>
 
 <h2>
-<a id="kapitel-die-bereits-übersetzt-sind" class="anchor" href="#kapitel-die-bereits-%C3%BCbersetzt-sind" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kapitel, die bereits übersetzt sind:</h2>
+<a id="inhaltsverzeichnis-mit-links-zu-dateien-der-übersetzten-kapitel" class="anchor" href="#inhaltsverzeichnis-mit-links-zu-dateien-der-%C3%BCbersetzten-kapitel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inhaltsverzeichnis (mit Links zu Dateien der übersetzten Kapitel):</h2>
 
 <ol>
-<li>Warum dieses Buch geschrieben wurde  - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%201.pdf">PDF</a>
+<li>
+<p>Warum dieses Buch geschrieben wurde</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%201.pdf">PDF</a></p>
 </li>
-<li>Was ist Sein Name?   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%202.pdf">PDF</a>
+<li>
+<p>Was ist Sein Name?</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%202.pdf">PDF</a></p>
 </li>
-<li>Der Gott allen Trostes   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%203.pdf">PDF</a>
+<li>
+<p>Der Gott allen Trostes</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%203.pdf">PDF</a></p>
 </li>
-<li>Der Herr unser Hirte - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%204.pdf">PDF</a>
+<li>
+<p>Der Herr unser Hirte</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%204.pdf">PDF</a></p>
 </li>
-<li>Er sprach zu ihnen über den Vater   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%205.pdf">PDF</a>
+<li>
+<p>Er sprach zu ihnen über den Vater</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%205.pdf">PDF</a></p>
 </li>
-<li>Jehovah  - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%206.pdf">PDF</a>
+<li>
+<p>Jehovah</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%206.pdf">PDF</a></p>
 </li>
-<li>Gütig ist der Herr  - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%207.pdf">PDF</a>
+<li>
+<p>Gütig ist der Herr</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%207.pdf">PDF</a></p>
 </li>
-<li>Der Herr, unsere Wohnung - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%208.pdf">PDF</a>
+<li>
+<p>Der Herr, unsere Wohnung</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%208.pdf">PDF</a></p>
 </li>
-<li>Viel mehr im Vergleich zu viel weniger   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%209.pdf">PDF</a>
+<li>
+<p>Viel mehr im Vergleich zu viel weniger</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%209.pdf">PDF</a></p>
 </li>
-<li>Selbstprüfung   - <a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2010.pdf">PDF</a>
+<li>
+<p>Selbstprüfung</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2010.pdf">PDF</a></p>
+</li>
+<li>
+<p>Dinge, die nicht erschüttert werden können</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
+</li>
+<li>
+<p>Ein Wort an die Unentschlossenen</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
+</li>
+<li>
+<p>Entmutigung</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
+</li>
+<li>
+<p>Das Rufen des Glaubens</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
+</li>
+<li>
+<p>Dankbarkeit verglichen mit Beklagen</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
+</li>
+<li>
+<p>Entsprechend dem Bild Christi</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
+</li>
+<li>
+<p>Gott ist genug</p>
+
+<p><em>noch nicht fertig übersetzt</em></p>
 </li>
 </ol>
       </section>
