Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <p>Daher verwende ich für Bibelzitate in der Übersetzung die lizenzfreie "Schlachter 1951"-Bibel, wie sie auf <a href="http://www.bibel-online.net/buch/schlachter_1951/1_mose/1/#1">Bibel-Online.net</a> angeboten wird.</p>
 
+<p>Die Übersetzung fertige ich in OpenOffice/LibreOffice-Writer an, in der Datei <a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/the%20god%20of%20all%20comfort-2.fodt">the god of all comfort-2.fodt</a> arbeite ich mich nach und nach vom Englischen zum Deutschen vor.</p>
+
 <h2>
 <a id="inhaltsverzeichnis-mit-links-zu-dateien-der-übersetzten-kapitel" class="anchor" href="#inhaltsverzeichnis-mit-links-zu-dateien-der-%C3%BCbersetzten-kapitel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inhaltsverzeichnis (mit Links zu Dateien der übersetzten Kapitel):</h2>
 
@@ -51,52 +53,52 @@
 <li>
 <p>Warum dieses Buch geschrieben wurde</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%201.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%201.pdf">PDF</a></p>
 </li>
 <li>
 <p>Was ist Sein Name?</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%202.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%202.pdf">PDF</a></p>
 </li>
 <li>
 <p>Der Gott allen Trostes</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%203.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%203.pdf">PDF</a></p>
 </li>
 <li>
 <p>Der Herr unser Hirte</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%204.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%204.pdf">PDF</a></p>
 </li>
 <li>
 <p>Er sprach zu ihnen über den Vater</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%205.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%205.pdf">PDF</a></p>
 </li>
 <li>
 <p>Jehovah</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%206.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%206.pdf">PDF</a></p>
 </li>
 <li>
 <p>Gütig ist der Herr</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%207.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%207.pdf">PDF</a></p>
 </li>
 <li>
 <p>Der Herr, unsere Wohnung</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%208.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%208.pdf">PDF</a></p>
 </li>
 <li>
 <p>Viel mehr im Vergleich zu viel weniger</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%209.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%209.pdf">PDF</a></p>
 </li>
 <li>
 <p>Selbstprüfung</p>
 
-<p><a href="https://github.com/einhirn/der-gott-allen-trostes/blob/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2010.pdf">PDF</a></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2010.pdf">PDF</a></p>
 </li>
 <li>
 <p>Dinge, die nicht erschüttert werden können</p>
