Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <p>Daher verwende ich für Bibelzitate in der Übersetzung die lizenzfreie "Schlachter 1951"-Bibel, wie sie auf <a href="http://www.bibel-online.net/buch/schlachter_1951/1_mose/1/#1">Bibel-Online.net</a> angeboten wird.</p>
 
-<p>Die Übersetzung fertige ich in OpenOffice/LibreOffice-Writer an, in der Datei <a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/the%20god%20of%20all%20comfort-2.fodt">the god of all comfort-2.fodt</a> arbeite ich mich nach und nach vom Englischen zum Deutschen vor.</p>
+<p>Die Übersetzung fertige ich in OpenOffice/LibreOffice-Writer an, in der Datei <a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/the%20god%20of%20all%20comfort-2.fodt">the god of all comfort-2.fodt</a> arbeite ich mich nach und nach vom Englischen zum Deutschen vor. (Technischer Hinweis: im .fodt-Format ist der Text als eine große XML-Datei abgelegt, im Gegensatz zu einer gezippten Datei- und Ordnerstruktur beim .odt-Format. Das ist nützlich, um Änderungen im Dokument auf Github nachvollziehen zu können.)</p>
 
 <h2>
 <a id="inhaltsverzeichnis-mit-links-zu-dateien-der-übersetzten-kapitel" class="anchor" href="#inhaltsverzeichnis-mit-links-zu-dateien-der-%C3%BCbersetzten-kapitel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inhaltsverzeichnis (mit Links zu Dateien der übersetzten Kapitel):</h2>
