Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,12 +44,21 @@
 
 <p>Daher verwende ich für Bibelzitate in der Übersetzung die lizenzfreie "Schlachter 1951"-Bibel, wie sie auf <a href="http://www.bibel-online.net/buch/schlachter_1951/1_mose/1/#1">Bibel-Online.net</a> angeboten wird.</p>
 
-<p>Die Übersetzung fertige ich in OpenOffice/LibreOffice-Writer an, in der Datei <a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/the%20god%20of%20all%20comfort-2.fodt">the god of all comfort-2.fodt</a> arbeite ich mich nach und nach vom Englischen zum Deutschen vor. </p>
+<p>Die Übersetzung fertige ich in OpenOffice/LibreOffice-Writer an, und arbeite mich dabei Satz- und Absatzweise vom Englischen zum Deutschen vor. </p>
 
-<p><em>(Technischer Hinweis: im .fodt-Format ist der Text als eine große XML-Datei abgelegt, im Gegensatz zu einer gezippten Datei- und Ordnerstruktur beim .odt-Format. Ich habe es gewählt, weil es mir nützlich erscheint, um Änderungen im Dokument auf Github nachvollziehen zu können.)</em></p>
+<p><em>(Technischer Hinweis: Ich speichere die Datei im .fodt-Format, weil der Text dann als eine große XML-Datei abgelegt wird, im Gegensatz zu einer gezippten Datei- und Ordnerstruktur beim .odt-Format. Ich habe es gewählt, weil es mir nützlich erscheint, um Änderungen im Dokument auf Github nachvollziehen zu können.)</em></p>
 
 <h2>
-<a id="inhaltsverzeichnis-mit-links-zu-dateien-der-übersetzten-kapitel" class="anchor" href="#inhaltsverzeichnis-mit-links-zu-dateien-der-%C3%BCbersetzten-kapitel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inhaltsverzeichnis (mit Links zu Dateien der übersetzten Kapitel):</h2>
+<a id="gesamtes-buch-bzw-bisher-übersetzt" class="anchor" href="#gesamtes-buch-bzw-bisher-%C3%BCbersetzt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gesamtes Buch bzw. bisher übersetzt:</h2>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/the%20god%20of%20all%20comfort-2.fodt">FODT</a> (in OpenOffice/LibreOffice öffnen)</p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20bisher%20uebersetzt.pdf">PDF</a></p>
+
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/ePub/the%20god%20of%20all%20comfort-2.epub">ePub</a></p>
+
+<h2>
+<a id="inhaltsverzeichnis-und-einzelkapitel" class="anchor" href="#inhaltsverzeichnis-und-einzelkapitel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inhaltsverzeichnis und Einzelkapitel:</h2>
 
 <ol>
 <li>
