Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 <li>
 <p>Dinge, die nicht erschüttert werden können</p>
 
-<p><em>noch nicht fertig übersetzt</em></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2011.pdf">PDF</a></p>
 </li>
 <li>
-<p>Ein Wort an die Unentschlossenen</p>
+<p>Ein Wort an die Zweifler</p>
 
 <p><em>noch nicht fertig übersetzt</em></p>
 </li>
