--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <li>
 <p>Ein Wort an die Zweifler</p>
 
-<p><em>noch nicht fertig übersetzt</em></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2012.pdf">PDF</a></p>
 </li>
 <li>
 <p>Entmutigung</p>
