Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 <p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2013.pdf">PDF</a></p>
 </li>
 <li>
-<p>Das Rufen des Glaubens</p>
+<p>Der Schrei des Glaubens</p>
 
-<p><em>noch nicht fertig übersetzt</em></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2014.pdf">PDF</a></p>
 </li>
 <li>
 <p>Dankbarkeit verglichen mit Beklagen</p>
