Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 <p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2014.pdf">PDF</a></p>
 </li>
 <li>
-<p>Dankbarkeit verglichen mit Beklagen</p>
+<p>Dankbarkeit im Vergleich zu Jammern</p>
 
-<p><em>noch nicht fertig übersetzt</em></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2015.pdf">PDF</a></p>
 </li>
 <li>
 <p>Entsprechend dem Bild Christi</p>
