Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/ePub/the%20god%20of%20all%20comfort-2.epub">ePub</a></p>
 
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/the%20god%20of%20all%20comfort-2.doc">DOC</a></p>
+
 <h2>
 <a id="inhaltsverzeichnis-und-einzelkapitel" class="anchor" href="#inhaltsverzeichnis-und-einzelkapitel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inhaltsverzeichnis und Einzelkapitel:</h2>
 
