--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <li>
 <p>Entsprechend dem Bild Christi</p>
 
-<p><em>noch nicht fertig übersetzt</em></p>
+<p><a href="https://github.com/einhirn/der-gott-allen-trostes/raw/master/PDFs/Der%20Gott%20allen%20Trostes%20-%20Kapitel%2016.pdf">PDF</a></p>
 </li>
 <li>
 <p>Gott ist genug</p>
